# ClusterCrit

./: MANIFEST.in  README.md  requirements.txt  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
R/: cluster.R
cluster_crit/: __init__.py  __main__.py  cluster.py  criteria.py  selection.py
tests/: test_cluster.py  test_criteria.py  test_selection.py
