[metadata]
author = Brent Barbachem
author_email = barbacbd@dukes.jmu.edu
maintainer = Brent Barbachem
maintainer_email = barbacbd@dukes.jmu.edu
name = cluster-crit
version = 1.0.0
description = Calculate various internal clustering validation or quality criteria.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cluster, crit, criteria, selection
license = MIT
license_files = file: LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
url = https://github.com/barbacbd/ClusterCrit

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pandas
    numpy
#    rpy2
tests_require =
    pytest
    pytest-subtests
    coverage
    pytest-cov
    mock
    pylint
python_requires = >=3.7, <4

[options.packages.find]
exclude =
    tests*
    user*
    refs*
    docker*
    R*

[options.entry_points]
console_scripts = 
    ClusterCrit = cluster_crit.__main__:main
